@@ -1,11 +1,11 @@
 Package: maxlike
 Type: Package
-Title: Model species distributions by estimating the probability of occurrence
-  using presence-only data.
-Version: 0.1-6
-Date: 2013-12-17
+Title: Model Species Distributions by Estimating the Probability of Occurrence Using Presence-Only Data
+Version: 0.1-7
+Date: 2017-1-21
 Depends: R (>= 2.10.0), raster
-Author: Richard Chandler and Andy Royle
+Suggests: dismo
+Author: Richard Chandler, Andy Royle and Roeland Kindt
 Maintainer: Richard Chandler <rchandler@warnell.uga.edu>
 Description: Provides a likelihood-based approach to modeling species distributions using presence-only data. In contrast to the popular software program MAXENT, this approach yields estimates of the probability of occurrence, which is a natural descriptor of a species' distribution.
 License: GPL (>=3)
